<resources>
    <string name="app_name">AsteroidRadar</string>
    <string name="non_hazard_icon_content_desc">Non Hazard Icon</string>
    <string name="hazard_icon_content_desc">Hazard Icon</string>

    <string name="close_approach_date">Close Approach Date</string>
    <string name="absolute_magnitude">Absolute Magnitude</string>
    <string name="estimated_diameter">Estimated Diameter</string>
    <string name="distance_from_earth">Distance From Earth</string>
    <string name="error_loading_feed">Error Loading Feed. Tap here to retry!</string>
    <string name="empty_main_feed">Looks like there is no asteroids yet!</string>
    <string name="empty_details">Select an Asteroid in the list to see its details here.</string>

    <string name="help_close_button">Accept</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="relative_velocity">Relative Velocity</string>
</resources>
